--- a/text/refs.bib
+++ b/text/refs.bib
@@ -1,3 +1,17 @@
+@article{turris2000,
+  title = {A Comparison of {{British Columbia}}'s {{ITQ}} Fisheries for Groundfish Trawl and Sablefish: Similar Results from Programmes with Differing Objectives, Designs and Processes.},
+  author = {Turris, B. R.},
+  year = {2000},
+  pages = {254--261},
+  publisher = {{Food and Agriculture Organization (FAO)}},
+  journal = {FAO Fisheries Technical Paper},
+  language = {English},
+  number = {No. 404/1}
+}
+
+
+
+
 @Article{         dfo2009PA,
   title         = {A Fishery Decision-Making Framework Incorporating the
                   {Precautionary Approach}
