--- a/text/gf2021-sopo.Rmd
+++ b/text/gf2021-sopo.Rmd
@@ -45,6 +45,12 @@ upr1 <- function(x) {
 p_thresh <- readRDS(here("data-generated/p-thresh.rds"))
 ```
 
+```{r pcod, include=FALSE}
+pcod3cd <- dplyr::filter(p_thresh, stock_clean == "Pacific Cod 3CD") %>%
+  pull(p_lrp)
+pcod3cd <- sprintf("%.1f", round(pcod3cd * 100, 1))
+```
+
 # Highlights
 
 - Something about most recent assessments...
@@ -61,53 +67,28 @@ p_thresh <- readRDS(here("data-generated/p-thresh.rds"))
 
 # Fisheries-independent groundfish surveys
 
-DFO conducts a suite of randomized surveys using bottom trawl, longline hook,
-and longline trap gear that, in aggregate, provide coverage for all offshore
-waters of Canada's Pacific Coast. Synoptic trawl surveys in Queen Charlotte
-Sound and Hecate Strait are conducted in odd numbered years and the West Coast
-of Vancouver Island (WCVI) and the West Coast of Haida Gwaii (WCHG) surveys are
-conducted in even numbered years. In addition to the bottom trawl surveys, four
-biennial Hard Bottom Longline (HBLL) surveys are conducted, two in "inside"
-waters (east of Vancouver Island) and two others in "outside" waters
-(everything else). Each year the HBLL surveys alternate between northern and
-southern areas. Lastly, a coast-wide longline trap survey targeting sablefish
-is conducted every year and DFO collects biological information from the
-International Pacific Halibut Commission (IPHC) Setline Survey. In 2020, the
-synoptic WCHG trawl survey, outside HBLL south survey, IPHC setline survey, and
-sablefish survey were conducted. The synoptic WCVI survey did not run due to
-COVID-19. As of writing, the only 2020 data in DFO's survey databases are the
-WCHG and sablefish surveys.
+DFO conducts a suite of randomized surveys using bottom trawl, longline hook, and longline trap gear that, in aggregate, cover Canada's Pacific Coast.
+Synoptic trawl surveys in Queen Charlotte Sound and Hecate Strait are conducted in odd numbered years and the West Coast of Vancouver Island (WCVI) and the West Coast of Haida Gwaii (WCHG) surveys are conducted in even numbered years.
+In addition to the bottom trawl surveys, four biennial Hard Bottom Longline (HBLL) surveys are conducted, two in "inside" waters (east of Vancouver Island) and two others in "outside" waters (everything else).
+Each year the HBLL surveys alternate between northern and southern areas.
+Lastly, a coast-wide longline trap survey targeting sablefish is conducted every year and DFO collects biological information from the International Pacific Halibut Commission (IPHC) Setline Survey.
+In 2020, the synoptic WCHG trawl survey, outside HBLL south survey, IPHC setline survey, and sablefish survey were conducted.
+The synoptic WCVI survey did not run due to COVID-19.
+As of writing, the only 2020 data in DFO's survey databases are the WCHG and sablefish surveys.
 
 # A state-space model of groundfish stock status
 
-Recent amendments to the *Fisheries Act* via the Fish Stocks provisions have
-resulted in an increased focus on stock status with respect to biological
-reference points. The Precautionary Approach (PA) Framework describes two stock
-status reference points: (1) the Limit Reference Point (LRP), a "status below
-which serious harm is occurring to the stock", and (2) the Upper Stock
-Reference Point (USR), which represents the "threshold below which removals
-must be progressively reduced in order to avoid reaching the LRP" [@dfo2009PA,
-Figure \@ref(fig:pa-framework)]. The USR defines the breakpoint between the
-healthy and cautious zone and the LRP defines the breakpoint between the
-cautious and critical zone (Figure \@ref(fig:pa-framework)).
+Recent amendments to the *Fisheries Act* via the Fish Stocks provisions have increased DFO's focus on stock status with respect to biological reference points.
+The Precautionary Approach (PA) Framework describes two stock status reference points: (1) the Limit Reference Point (LRP), a "status below which serious harm is occurring to the stock", and (2) the Upper Stock Reference Point (USR), which represents the "threshold below which removals must be progressively reduced in order to avoid reaching the LRP" [@dfo2009PA, Figure \@ref(fig:pa-framework)].
+The USR defines the breakpoint between the healthy and cautious zone and the LRP defines the breakpoint between the cautious and critical zone (Figure \@ref(fig:pa-framework)).
+The LRP and USR are often calculated based on B~MSY~ (biomass at maximum sustainable yield) at provisional levels of 0.4 and 0.8 B~MSY~, but in other cases are based on historical reference points (historical biomass values that match the definition of the LRP or USR).
 
-Assessment scientists conduct regular stock assessment of major fish stocks in
-BC. These assessments take into account... and assess status with respect to
-reference points...
-
-Here, we gather output data from these assessments representing the full
-posterior distribution of biomass compared to three measures of stock status:
-(1) B/B~MSY~ (biomass divided by biomass at maximum sustainable yield),
-(2) B/USR (biomass divided by the USR), and
-(3) B/LRP (biomass divided by the LRP).
-We develop a Bayesian state-space time-series model to explore trends in
-the measures of status across stocks until the year 2020.
-To do this, we build on a model described in @hilborn2020 in two ways:
-(1) we incorporate uncertainty in stock-specific status and
-(2) we project the latent underlying stock-specific status forward to the last year (2020).
-The latter accounts for not all stocks having an up-to-date stock assessment
-and accounts for future possible stock states based on the time-series properties
-of the fitted stock trajectories.
+Assessment scientists conduct regular stock assessment of major fish stocks in BC.
+These assessments combine fishery-dependent data, such as catches, and fishery-independent data (data from scientific surveys), to estimate quantities such as growth, natural mortality, and maturity, and ultimately derive measures of stock status and fishing intensity.
+Here, we gather output data from these assessments representing the posterior distribution of biomass compared to three measures of stock status: (1) B/B~MSY~ (biomass divided by B~MSY~), (2) B/USR (biomass divided by the USR), and (3) B/LRP (biomass divided by the LRP).
+We develop a Bayesian state-space time-series model to explore trends in these measures of status across stocks until the year 2020.
+To do this, we build on a model described in @hilborn2020 in two ways: (1) we incorporate uncertainty in stock-specific status and (2) we project the latent underlying stock-specific status forward to the last year (2020).
+The latter accounts for not all stocks having an up-to-date stock assessment and accounts for future possible stock states based on the time-series properties of the fitted stock trajectories.
 
 Using $x_t$ to denote **log** stock status at time $t$, we model $x_t$ as
 $$
@@ -128,79 +109,51 @@ y_{j,t} &= x_{t} + \alpha_j + \epsilon_{j,t}, \;
       \left(\rho \epsilon_{j,t-1}, \sigma_{\epsilon}^2 \right),
 \end{aligned}
 $$
-where $\hat{y}_{j,t}$ is the mean log stock status for stock $j$
-and time $t$ (from an assessment), $y_{j,t}$ is the unobserved "true" mean stock-specific status,
-and $\hat{\tau}$ is the standard deviation of the log stock status from an assessment.
-We group Pacific Cod and Walleye Pollock stocks to share a $\rho$ and $\sigma_{\epsilon}$
-and all other stock to share another $\rho$ and $\sigma_{\epsilon}$ (stock
-trajectories were considerably more "wiggly" for these species).
-The symbol $\alpha_j$ represents a stock-specific intercept
-that is constrained such that the sum of all $\alpha_j$ is zero to make the
-overall mean $x_t$ identifiable.
-The symbol $\epsilon_{j,t}$ represents a first-order autoregressive (AR1) deviation
-with correlation $\rho$ and standard deviation $\sigma_\epsilon$.
-We place half-Normal(0, 1) priors on $\sigma_{\epsilon}$ and $\sigma_{\eta}$,
-Normal(0, 5^2^) priors on $x_0$ and $\alpha_j$,
-and a Normal(0, 1)[-1, 1] prior on $\rho$.
-We fit the models with Stan [@carpenter2017; @rstan2020], sampling 1000 iterations
-on each of 6 chains and discarding the first half as warm up.
+where $\hat{y}_{j,t}$ is the mean log stock status for stock $j$ and time $t$ (from an assessment), $y_{j,t}$ is the unobserved "true" mean stock-specific status, and $\hat{\tau}$ is the standard deviation of the log stock status from an assessment.
+We group Pacific Cod and Walleye Pollock stocks to share a $\rho$ and $\sigma_{\epsilon}$ and all other stock to share another $\rho$ and $\sigma_{\epsilon}$ (stock trajectories were considerably more "wiggly" for these species).
+The symbol $\alpha_j$ represents a stock-specific intercept that is constrained such that the sum of all $\alpha_j$ is zero to make the overall mean $x_t$ identifiable.
+The symbol $\epsilon_{j,t}$ represents a first-order autoregressive (AR1) deviation with correlation $\rho$ and standard deviation $\sigma_\epsilon$.
+We place half-Normal(0, 1) priors on $\sigma_{\epsilon}$ and $\sigma_{\eta}$, Normal(0, 5^2^) priors on $x_0$ and $\alpha_j$, and a Normal(0, 1)[-1, 1] prior on $\rho$.
+We fit the models with Stan [@carpenter2017; @rstan2020], sampling 1000 iterations on each of 6 chains and discarding the first half as warm up.
 
 # Status and trends
 
 Main results here; quick bullets for now
 
-- Lingcod 4B  Bocaccio 5ABCD the only stocks with considerable posterior
-  density below the LRP as of the last assessment. Bocaccio, however, are
-  predicted to rebuild by XX due to a massive recruitment event in XX (REF).
+Lingcod 4B and Bocaccio 5ABCD were the only stocks (with available time series posteriors) with considerable posterior density below their LRP as of their last assessment.
+Bocaccio, however, are predicted to rebuild by XX due to a large recruitment
+event in XX (REF).
 
-- Note that Yelloweye Rockfish in outside BC waters were previously estimated
-  to be below their LRP [@dfo2015yelloweyeoutside]; an updated assessment (REF)
-  found a low probability of this, but is not included here, reasons...
-  Quillback, some probability as of XX, but full posterior not available and so
-  not shown in Figure \@ref(fig:ridges) but is shown in Figure
-  \@ref(fig:ts-lrp).
+Yelloweye Rockfish in outside BC waters were previously estimated to be below their LRP [@dfo2015yelloweyeoutside]; however, an updated assessment (REF) found a low probability of this.
+Quillback Rockfish in outside and inside waters, had some posterior density below their LRPs as of the 2011 assessment, but the full posterior distribution was not available and so is not shown in Figure \@ref(fig:ridges) but is shown
+as quantiles in Figure \@ref(fig:ts-lrp).
 
-- No clear correlation between year of last assessment and stock status (Figure
-  \@ref(fig:ridges))
 
-- There was a clear decline in status for all three metrics prior to
-  approximately 2000 (Figure \@ref(fig:overall)). Status prior to 2000 is more
-  uncertain since there is not a continuous random stratified survey and a lack
-  of commercial observers...
+We observed no clear correlation between the year of last assessment and stock status (Figure \@ref(fig:ridges)).
 
-- Mean status since about 2000 has been relatively stable, although with
-  considerable variation within some stocks (e.g., Pacific Cod, Walleye
-  Pollock, and Redstripe Rockfish stocks)
+There was a clear decline in status for all three metrics prior to approximately 2000 (Figure \@ref(fig:overall)).
+Status prior to 2000 is more uncertain since there is not a continuous random stratified survey and a lack of commercial observers.
 
-- Overall mean B/LRP is estimated to be `r med1(blrp$.value)`
-  (95% CI: `r lwr1(blrp$.value)`--`r upr1(blrp$.value)`) in 2020, and we note
-  the increased uncertainty in the last few years due to not all assessments
-  being current (Figure \@ref(fig:overall)).
+The implementation of ITQs in 1997 [@turris2000], and the initiation of the current synoptic trawl surveys in 2002, coincided with the beginning of a relatively stable mean status.
+However, this stable mean is accompanied by a considerable variation across and within some stocks Figure \@ref(fig:ts-lrp).
 
-- Overall mean B/USR and B/B~MSY~ are estimated at `r med1(busr$.value)` (95%
-  CI: `r lwr1(busr$.value)`--`r upr1(busr$.value)`) and `r med1(bbmsy$.value)`
-  (95% CI: `r lwr1(bbmsy$.value)`--`r upr1(bbmsy$.value)`) in 2020
+<!-- - Mean status since about 2000 has been relatively stable, although with -->
+<!--   considerable variation within some stocks (e.g., Pacific Cod, Walleye -->
+<!--   Pollock, and Redstripe Rockfish stocks) -->
 
--  `r sum(p_thresh$p_usr > 0.25)`/`r nrow(p_thresh)` in Figure
-  \@ref(fig:ridges) stocks had > 25% probability of being below their USR as of
-  the last date of assessment with the range between the LRP and USR defined as
-  the "Cautious Zone" in the PA Framework.
+We estimate the overall mean B/LRP in 2020 to be `r med1(blrp$.value)` (95% CI: `r lwr1(blrp$.value)`--`r upr1(blrp$.value)`). We note the increased uncertainty in the last few years due to not all assessments being current (Figure \@ref(fig:overall)).
 
-```{r pcod, include=FALSE}
-pcod3cd <- dplyr::filter(p_thresh, stock_clean == "Pacific Cod 3CD") %>% pull(p_lrp)
-pcod3cd <- sprintf("%.1f", round(pcod3cd * 100, 1))
-```
+We estimate the overall mean B/USR and B/B~MSY~ in 2020 to be `r med1(busr$.value)` (95% CI: `r lwr1(busr$.value)`--`r upr1(busr$.value)`) and `r med1(bbmsy$.value)` (95% CI: `r lwr1(bbmsy$.value)`--`r upr1(bbmsy$.value)`).
 
-- `r sum(p_thresh$p_lrp > 0.05)`/`r nrow(p_thresh)` stocks had > 5% probability of being below their LRP as of the last
-  date of assessment. Pacific Cod 3CD: `r pcod3cd`% in 2020
+`r sum(p_thresh$p_usr > 0.25)`/`r nrow(p_thresh)` of the stocks in Figure \@ref(fig:ridges) had > 25% probability of being below their USR as of the last date of assessment.
+
+`r sum(p_thresh$p_lrp > 0.05)`/`r nrow(p_thresh)` stocks had > 5% probability of being below their LRP as of the last date of assessment; Pacific Cod in 3CD almost met this threshold with a `r pcod3cd`% probability B $<$ LRP in 2020.
 
 # Factors influencing trends
 
-There are many potential causes for the observed trends with the most obvious
-and direct being the impact from fishery removals and management interventions.
-There are also potential species interactions and climatic effects on trends in
-local biomass density of these species. Ongoing work suggests ... Philina's
-work here...
+There are many potential causes for the observed trends with the most obvious and direct being the impact from fishery removals and management interventions.
+
+There are also potential species interactions and climatic effects on trends in local biomass density of these species. Ongoing work suggests ... Philina's work here...
 
 \vspace{6pt}
 
@@ -218,24 +171,20 @@ work here...
 
 # Figures
 
-(ref:fig-pa) Illustration of DFO's Precautionary Approach Framework. The two
-vertical lines---the Limit Reference Point (LRP) and Upper Stock Reference
-(USR)---are the focus of this analysis. Based on @dfo2009PA.
+(ref:fig-pa) Illustration of DFO's Precautionary Approach Framework.
+The two vertical lines---the Limit Reference Point (LRP) and Upper Stock Reference (USR)---are the focus of this analysis.
+Based on @dfo2009PA.
 
 ```{r pa-framework, fig.cap="(ref:fig-pa)", out.width="3.1in", fig.align="center", fig.pos="ht"}
 include_graphics(here("figs/pa-framework.pdf"))
 ```
 
 (ref:fig-ridges) Posterior distribution of three measures of stock status.
-Stocks are arranged in order of assessment with the most recent assessments at
-the top; years in the first column represent the year the status represents.
-Colours represent the mean B/LRP value. The x-axis has been square-root
-transformed to slightly compress high ratio values for visualization. Stocks
-with missing data in the B/B~MSY~ column are assessments where historical
-reference points were chosen instead of MSY-based reference points. Vertical
-dashed lines are at values of 1.0 in all columns and also at values of 0.4 and
-0.8 in the B/B~MSY~ column (0.4 and 0.8 B~MSY~ are provisional LRP and USR
-values in the PA Framework).
+Stocks are arranged in order of assessment with the most recent assessments at the top; years in the first column represent the year the status represents.
+Colours represent the mean B/LRP value.
+The x-axis has been square-root transformed to slightly compress high ratio values for visualization.
+Stocks with missing data in the B/B~MSY~ column are assessments where historical reference points were chosen instead of MSY-based reference points.
+Vertical dashed lines are at values of 1.0 in all columns and also at values of 0.4 and 0.8 in the B/B~MSY~ column (0.4 and 0.8 B~MSY~ are provisional LRP and USR values in the PA Framework).
 
 <!-- TODO: SOME HAVE PROJECTIONS? -->
 
@@ -243,24 +192,18 @@ values in the PA Framework).
 include_graphics(here("figs/ridges.pdf"))
 ```
 
-(ref:fig-ts-lrp) Trends in B/LRP for 24 groundfish stocks in BC. Coloured lines
-and ribbons represent the individual stocks. Dark coloured lines and shaded
-ribbons represent output from stock assessments: trajectories of median B/LRP
-95% quantile credible intervals. Thin lines represent draws from the posterior
-distribution of $y_{j,t}$ (latent stock-specific mean trends; colours) and
-$x_t$ (latent overall mean trend; grey). The overall mean trend ($x_t$; grey)
-is the same across panels.
+(ref:fig-ts-lrp) Trends in B/LRP for 24 groundfish stocks in BC.
+Coloured lines and ribbons represent the individual stocks.
+Dark coloured lines and shaded ribbons represent output from stock assessments: trajectories of median B/LRP 95% quantile credible intervals.
+Thin lines represent draws from the posterior distribution of $y_{j,t}$ (latent stock-specific mean trends; colours) and $x_t$ (latent overall mean trend; grey).
+The overall mean trend ($x_t$; grey) is the same across panels.
 
 ```{r ts-lrp, fig.cap = "(ref:fig-ts-lrp)", out.width="5in", fig.align="center", fig.pos="ht"}
 include_graphics(here("figs/blrp-x-t.pdf"))
 ```
 
-(ref:fig-overall) Overall mean biomass status ($x_t$) for B/LRP, B/USR, and
-B/B~MSY~. Dark lines represent the median trajectory, shaded ribbons represent
-95% quantile credible intervals, and thin lines represent 25 illustrative draws from the
-posterior.
+(ref:fig-overall) Overall mean biomass status ($x_t$) for B/LRP, B/USR, and B/B~MSY~.
+Dark lines represent the median trajectory, shaded ribbons represent 95% quantile credible intervals, and thin lines represent 25 illustrative draws from the posterior.
 
-```{r overall, fig.cap = "(ref:fig-overall)", out.width="3.5in", fig.align="center", fig.pos="ht"}
-include_graphics(here("figs/ts-summary.pdf"))
-```
+```{r overall, fig.cap = "(ref:fig-overall)", out.width="3.5in", fig.align="center", fig.pos="ht"} include_graphics(here("figs/ts-summary.pdf")) ```
 
