--- a/text/refs.bib
+++ b/text/refs.bib
@@ -1,3 +1,19 @@
+@article{english2021,
+  title = {Contrasting local climate velocity impacts in warm and cool locations: a meta-analysis across 38 demersal fish species in the northeast {Pacific}},
+  author = {Philina A. English and Eric J. Ward and Christopher N. Rooper and Robyn E. Forrest and Luke A. Rogers and Karen L. Hunter and Andrew M. Edwards and Brendan M. Connors and Sean C. Anderson},
+  journal = {To be submitted to a preprint server in the next $\sim$ 2 weeks},
+  year = 2021,
+}
+
+@article{anderson2019syn,
+  title = {A Reproducible Data Synopsis for over 100 Species of {{British Columbia}} Groundfish},
+  author = {Anderson, S.C. and Keppel, E. A. and Edwards, A. M.},
+  year = {2019},
+  pages = {vii + 321~p},
+  volume = {2019/041},
+  journal = {DFO Can. Sci. Advis. Sec. Res. Doc.},
+}
+
 @article{turris2000,
   title = {A Comparison of {{British Columbia}}'s {{ITQ}} Fisheries for Groundfish Trawl and Sablefish: Similar Results from Programmes with Differing Objectives, Designs and Processes.},
   author = {Turris, B. R.},
