--- a/text/refs.bib
+++ b/text/refs.bib
@@ -1,3 +1,14 @@
+@article{laurel2020,
+  title = {Loss of Spawning Habitat and Prerecruits of {{Pacific}} Cod during a {{Gulf}} of {{Alaska}} Heatwave},
+  author = {Laurel, Benjamin J. and Rogers, Lauren A.},
+  year = {2020},
+  volume = {77},
+  doi = {10.1139/cjfas-2019-0238},
+  journal = {Canadian Journal of Fisheries and Aquatic Sciences},
+  number = {4},
+  pages = {644--650}
+}
+
 @article{english2021,
   title = {Contrasting local climate velocity impacts in warm and cool locations: a meta-analysis across 38 demersal fish species in the northeast {Pacific}},
   author = {Philina A. English and Eric J. Ward and Christopher N. Rooper and Robyn E. Forrest and Luke A. Rogers and Karen L. Hunter and Andrew M. Edwards and Brendan M. Connors and Sean C. Anderson},
