--- a/text/gf2021-sopo.Rmd
+++ b/text/gf2021-sopo.Rmd
@@ -123,20 +123,19 @@ We collected assessment biological stock status data from 24 groundfish assessme
 The posterior density of B/LRP was clearly above one for most stocks as of the last assessment (Figure \@ref(fig:ridges)).
 Lingcod 4B and Bocaccio 5ABCD were the only stocks (with full available posteriors) with considerable posterior density below their LRP as of their last assessment (Figure \@ref(fig:ridges)).
 The assessment of Bocaccio, however, predicted the stock to rebuild to XX by XX due to a large recruitment event in XX (REF).
-Yelloweye Rockfish in outside BC waters were previously estimated to be below their LRP [@dfo2015yelloweyeoutside]; however, an updated assessment (REF; the one stock not included in our dataset) found a low probability of this.
+Yelloweye Rockfish in outside BC waters were previously estimated to be below their LRP with high probability [@dfo2015yelloweyeoutside]; however, a recent rebuilding assessment found the stock is likely above its LRP (REF; the one stock not included in our dataset).
 Quillback Rockfish in both outside and inside waters had some posterior density below their LRPs as of the 2011 assessment, but the full posterior distribution was not available and so is not shown in Figure \@ref(fig:ridges) but is shown as quantiles in Figure \@ref(fig:ts-lrp).
-As of the last assessment date, `r sum(p_thresh$p_lrp > 0.05)`/`r nrow(p_thresh)` stocks had > 5% probability of being below their LRP; Pacific Cod in 3CD almost met this threshold with a `r pcod3cd`% probability B $<$ LRP in 2020.
-Conversely, `r sum(p_thresh$p_usr > 0.25)`/`r nrow(p_thresh)` of the stocks in Figure \@ref(fig:ridges) had > 25% probability of being below their USR.
+As of their last assessment date, `r sum(p_thresh$p_lrp > 0.05)`/`r nrow(p_thresh)` stocks in Figure \@ref(fig:ridges) had > 5% probability of being below their LRP; Pacific Cod in 3CD almost met this threshold with a `r pcod3cd`% probability B $<$ LRP in 2020.
+Considering the USR instead of LRP, `r sum(p_thresh$p_usr > 0.25)`/`r nrow(p_thresh)` of the stocks in Figure \@ref(fig:ridges) had > 25% probability of being below their USR.
 
 Across all stocks, there was a clear decline in average biological status for all three indices prior to approximately 2000 (Figure \@ref(fig:overall)).
 The late 1990s and early 2000s marked the beginning of a relatively stable average status.
-We estimated the overall mean B/LRP in 2020 to be `r med1(blrp$.value)` (95% CI: `r lwr1(blrp$.value)`--`r upr1(blrp$.value)`).
+We estimated the overall mean B/LRP in 2020 to be `r med1(blrp$.value)` (95% credible interval [CI]: `r lwr1(blrp$.value)`--`r upr1(blrp$.value)`).
 We estimated the overall mean B/USR and B/B~MSY~ in 2020 to be `r med1(busr$.value)` (95% CI: `r lwr1(busr$.value)`--`r upr1(busr$.value)`) and `r med1(bbmsy$.value)` (95% CI: `r lwr1(bbmsy$.value)`--`r upr1(bbmsy$.value)`).
 We note the increased uncertainty in the last few years due to not all assessments being current (Figure \@ref(fig:overall)).
 
 The clear pattern in the average biological status has been accompanied by considerable variation within and across individual stocks (Figure \@ref(fig:ts-lrp)).
 Within individual stocks, Pacific Cod and Walleye Pollock---both with shorter generation times compared to many other assessed stocks here---exhibited strong patterns of decadal variation.
-These patterns are partially driven by trends in commercial catches in earlier decades.
 Across stocks, Redstripe Rockfish in north and south BC and Yellowtail Rockfish are examples of stocks with B/LRP trajectories consistently above the average.
 On the other hand, Lingcod 4B and Bocaccio 5ABCD are examples of stocks with B/LRP estimated at consistently below the average.
 Sablefish followed the average B/LRP trajectory until around 1990 when they continued to decline while the average stabilized.
@@ -146,15 +145,26 @@ The Sablefish stock trajectory has shown some signs of turnaround in recent year
 
 There are many potential causes for the observed trends with the most obvious and direct being the impact from fishery removals and management interventions.
 The transition from declining average B/LRP and B/USR to a relatively stable trajectory coincided with the implementation of individual transferable quotas (ITQs) for the trawl fleet in 1997 [@turris2000], and with the initiation of the current synoptic trawl surveys in 2003.
-Quota, and therefore catches  [@anderson2019syn], for many stocks has remained relatively constant over the last two decades.
+Quota, and therefore catches [@anderson2019syn], for many stocks has remained relatively constant over the last two decades.
+The decadal patterns for Pacific Cod and Walleye Pollock in early decades are largely driven by trends in commercial catches.
+ANYTHING ELSE HERE?
 
-There are also potential species interactions and climatic effects on trends in local biomass density of these species. Ongoing work [@english2021] suggests that ...
+There are also potential species interactions and climatic effects on trends in local biomass density of these species.
+ANYTHING ABOUT SPECIES INTERACTIONS?
+Loss of spawning habitat due to recent oceanographic conditions has been hypothesized to have led to years of low recruitment in some groundfish [e.g., Pacific Cod in nearby Alaskan waters; @laurel2020].
+Conversely, other stocks (e.g., Bocaccio REF) have experienced periods of extremely strong recruitment (44 times the average in XX) presumably due to, at least in part, oceanographic conditions.
 
-\vspace{6pt}
+Underlying these stock-level trends, ongoing work suggests that temperature velocity---the pace a fish would have to move to maintain consistent temperature---may be leading to a fine-scale redistribution of groundfish species Canadian Pacific waters [@english2021].
+@english2021 found declines in biomass density over the last decade (negative "biomass velocities", or the equivalent of temperature velocity for biomass) in the warmest locations of the coast for approximately one-quarter of the species examined.
+However, at the same time, biomass density remained stable or increased in cooler regions for 94% of the species.
+Such a redistribution of species biomass has the potential to generate new ecological and fisheries and interactions.
+
+<!-- On average, and for roughly half the species-maturity combinations, temperature velocity had a more negative effect on biotic velocity in already warm locations than in relatively cool locations. -->
+<!-- approximately one quarter of species-maturity combinations experienced declines (negative biotic velocities) in the warmest locations when experiencing maximum warming. -->
+<!-- In contrast, locations experiencing minimal warming or cool locations experiencing maximum warming experienced stable or increasing biotic velocities. -->
+<!-- Evidence of declines in biomass in the warmest locations and increases in cooler locations suggests a redistribution of species with the potential for new ecological and fisheries interactions. -->
 
 # References
-
-\vspace{9pt}
 
 <div id="refs"></div>
 
